2009-xx-xx  Sebastien Vincent <sebastien.vincent@turnserver.org>

  * Version 0.3		- Add turn-ipv6-07 draft support;
									- Experimental DTLS support (not in TURN standard).

2009-08-26  Sebastien Vincent <sebastien.vincent@turnserver.org>

  * Version 0.2.3 - Add turn-ipv6-06 draft support;
                  - Add turn-16 draft support;
                  - Fix lifetime bug.

2009-03-09  Sebastien Vincent <vincent@lsiit.u-strasbg.fr>

  * Version 0.2.2 - Load sharing with multiple uplink addresses;
                  - Increase nonce lifetime to one hour;
                  - Fix ChannelBind refresh;
                  - Add turn-13 draft;
                  - Add 403 error message.

2008-12-17  Sebastien Vincent <vincent@lsiit.u-strasbg.fr>

  * Version 0.2.1 - Fix CRC32 generation;
                  - Drop privileges if run as root / setuid root.

2008-12-15  Sebastien Vincent <vincent@lsiit.u-strasbg.fr>

  * Version 0.2  - Add attributes from turn-12 draft;
                 - Add authentication on all TURN responses when possible;
                 - Pre-calculate account MD5 hash;
                 - Re-organize some code (message-integrity calculation, ...);
                 - Alternate behavior for DF flag;
                 - Separate TCP and TLS sockets;
                 - Correctly relayed data from peer to client in TLS;
                 - Multiple XOR-PEER-ADDRESS support in CreatePermission;
                 - Update wireshark parser (packet-stun2.c);
                 - Additionnal configuration parameters;
                 - Allocation number and bandwidth quota;
                 - Address / port restrictions;
                 - Reconstruct fragmented TCP messages support;
                 - Prevent allocation hijacking support;
                 - Add logs support via syslog.

2008-11-22  Sebastien Vincent <vincent@lsiit.u-strasbg.fr>

  * Version 0.1.3 - Backport code refactoring from 0.2-draft-11 branch;